Mobile login done

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -69,7 +69,7 @@
                       <form action="/Login" method="post" class="row g-3 needs-validation" novalidate>
 
                         <div class="col-12">
-                          <label for="yourUsername" class="form-label">Username</label>
+                          <label for="yourUsername" class="form-label">Email or Mobile</label>
                           <div class="input-group has-validation">
 
                             <!-- changes made M-->
