--- a/views/desk1/complaintpage.ejs
+++ b/views/desk1/complaintpage.ejs
@@ -453,7 +453,7 @@
                   <!-- <label class="col-sm-5 col-form-label"></label> -->
                   <div class="col-sm-3"></div>
                   <div class="col-sm-4">
-                    <a href="/approveComplaintDesk1?cid=<%=`${complaint.id}`%>"><button type="button" class="btn btn-primary">Approve</button></a>
+                    <a href="/approveComplaintDesk1?cid=<%=`${complaint.id}`%>"><button type="button" class="btn btn-primary">Escalate</button></a>
                   </div>
                 <!-- </div>
                 <div class="row mb-3"> -->
