--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -44,7 +44,7 @@
     <div class="d-flex align-items-center justify-content-between">
       <a href="/Dashboard" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
-        <span class="d-block">Shikayat</span>
+        <span class="d-block">Yukti</span>
       </a>
       <i class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
@@ -191,7 +191,7 @@
           </a>
         </li>
 
-        
+
       </li><!-- End Components Nav -->
     </ul>
 
