logo Shikayat added

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9,6 +9,10 @@ body {
   color: #444444;
 }
 
+/* .logoimg{
+  height: 15vh;
+  width: 40vh;
+} */
 a {
   color: #4154f1;
   text-decoration: none;
