--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,7 +50,7 @@
 
       <a href="/" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
-        <span class="d-block">Yukti</span>
+        <!-- <span class="d-block">Yukti</span> -->
       </a>
       
       <nav id="navbar" class="navbar">
@@ -522,7 +522,7 @@
           <div class="col-lg-5 col-md-12 footer-info">
             <a href="index.html" class="logo d-flex align-items-center">
               <img src="assets/img/logo.png" alt="">
-              <span>Yukti</span>
+              <!-- <span>Yukti</span> -->
             </a>
             <p>We are here to provide an IT embeded portal in place for handling the labour complaints.</p>
             <!-- <div class="social-links mt-3">
