--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -52,7 +52,7 @@
                   <div class="d-flex justify-content-center py-4">
                     <a href="/UserDashbord" class="logo d-flex align-items-center w-auto">
                       <img src="assets/img/logo.png" alt="">
-                      <span class="d-block ">Yukti</span>
+                      <!-- <span class="d-block ">Yukti</span> -->
                     </a>
                   </div><!-- End Logo -->
 
