--- a/views/auth/mobileapp.ejs
+++ b/views/auth/mobileapp.ejs
@@ -50,7 +50,7 @@
 
       <a href="/" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
-        <span class="d-block">Yukti</span>
+        <!-- <span class="d-block">Yukti</span> -->
       </a>
       
       <nav id="navbar" class="navbar">
