--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -76,10 +76,10 @@
                                 <div
                                     class="col-lg-6 col-md-6 d-flex flex-column align-items-center justify-content-center">
 
-                                    <div class="d-flex justify-content-center py-4">
-                                        <a href="/UserDashbord" class="logo d-flex align-items-center w-auto">
-                                            <img src="assets/img/logo.png" alt="">
-                                            <span class="d-block">Yukti</span>
+                                    <div class="d-flex justify-content-center" >
+                                        <a href="/UserDashbord" class="logo d-flex align-items-center w-auto p-3">
+                                            <img src="assets/img/logo.png" alt="" style="height:20vh">
+                                            <!-- <span class="d-block">Yukti</span> -->
                                         </a>
                                     </div><!-- End Logo -->
 
