--- a/views/desk1/desk1dashboard.ejs
+++ b/views/desk1/desk1dashboard.ejs
@@ -43,7 +43,7 @@
     <div class="d-flex align-items-center justify-content-between">
       <a href="/Dashboard" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
-        <span class="d-block">Yukti</span>
+        <!-- <span class="d-block">Yukti</span> -->
       </a>
       <i class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
