--- a/views/superadmin/onboard_admins.ejs
+++ b/views/superadmin/onboard_admins.ejs
@@ -71,7 +71,7 @@
                             <div class="d-flex justify-content-center py-4">
                                 <a href="#" class="logo d-flex align-items-center w-auto">
                                     <img src="assets/img/logo.png" alt="">
-                                    <span class="d-block">Yukti</span>
+                                    <!-- <span class="d-block">Yukti</span> -->
                                 </a>
                             </div><!-- End Logo -->
 
