--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -77,9 +77,8 @@
                                     class="col-lg-6 col-md-6 d-flex flex-column align-items-center justify-content-center">
 
                                     <div class="d-flex justify-content-center" >
-                                        <a href="/UserDashbord" class="logo d-flex align-items-center w-auto p-3">
-                                            <img src="assets/img/logo.png" alt="" style="height:20vh">
-                                            <!-- <span class="d-block">Yukti</span> -->
+                                        <a href="/" class="logo d-flex align-items-center w-auto p-3">
+                                            <img src="assets/img/logo.png" class="w-100" alt="">
                                         </a>
                                     </div><!-- End Logo -->
 
