--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/logo.png" rel="icon">
+  <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -31,8 +31,6 @@
 </head>
 
 <body>
-
-
   <%- include('common_scripts/analytics')%>
 
   <%- include('common_scripts/chatbot')%>
@@ -82,7 +80,7 @@
 
           <li><a class="nav-link scrollto" href="/#aboutus">About Us</a></li>
           <li><a class="nav-link scrollto" href="/#services">Services</a></li>
-          <li><a class="nav-link scrollto" href="/#faq">FAQ's</a></li>
+          <li><a class="nav-link scrollto" href="https://sihchatbot.tawk.help/category/faq">FAQ's</a></li>
           <li><a class="nav-link scrollto" href="/Mobileapp">Mobile App</a></li>
           <li><a class="nav-link scrollto" href="/Signup">Signup</a></li>
           <li><a class="nav-link scrollto" href="/Login">Login</a></li>
@@ -122,7 +120,6 @@
     </div>
 
   </section><!-- End Hero -->
-
   <main id="main">
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
@@ -210,19 +207,19 @@
    
 
     <!-- ======= F.A.Q Section ======= -->
-    <section id="faq" class="faq">
+    <!-- <section id="faq" class="faq">
 
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <!-- <h2>F.A.Q</h2> -->
-          <p>Frequently Asked Questions</p>
+          <h2>F.A.Q</h2> -->
+          <!-- <p>Frequently Asked Questions</p>
         </header>
 
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-6"> -->
             <!-- F.A.Q List 1-->
-            <div class="accordion accordion-flush" id="faqlist1">
+            <!-- <div class="accordion accordion-flush" id="faqlist1">
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-1">
@@ -265,10 +262,10 @@
             </div>
           </div>
 
-          <div class="col-lg-6">
+          <div class="col-lg-6"> -->
 
             <!-- F.A.Q List 2-->
-            <div class="accordion accordion-flush" id="faqlist2">
+            <!-- <div class="accordion accordion-flush" id="faqlist2">
 
               <div class="accordion-item">
                 <h2 class="accordion-header">
@@ -316,7 +313,7 @@
 
       </div>
 
-    </section><!-- End F.A.Q Section -->
+    </section>End F.A.Q Section --> -->
 
 
    
@@ -540,7 +537,7 @@
               <li><i class="bi bi-chevron-right"></i> <a href="#aboutus">About us</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#services">Services</a></li>
               <!-- <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li> -->
-              <li><i class="bi bi-chevron-right"></i> <a href="#faq">FAQ's</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="https://sihchatbot.tawk.help/category/faq">FAQ's</a></li>
             </ul>
           </div>
 
