Added plagiarism checker

--- a/views/desk1/complaintpage.ejs
+++ b/views/desk1/complaintpage.ejs
@@ -155,6 +155,12 @@
               <!-- General Form Elements -->
               <form>
                 <div class="row mb-3">
+                  <label for="inputText" class="col-sm-3 ">Complaint Similarity</label>
+                  <div class="col-sm-9">
+                    <%=complaint.percentage%>
+                  </div>
+                </div>
+                <div class="row mb-3">
                   <label for="inputText" class="col-sm-3 ">Name</label>
                   <div class="col-sm-9">
                     <%=EndUserData.Name%>
