--- a/views/user/complaintpage.ejs
+++ b/views/user/complaintpage.ejs
@@ -390,9 +390,9 @@
                             <div class="row mb-3">
                               <label for="inputPassword" class="col-sm-3 "></label>
                               <div class="col-sm-9">
-
-                                
+                                  <a href="/ViewImage?url=https://complaint-bucket-sih.s3.ap-south-1.amazonaws.com/<%=cid%>.jpg" class="btn-btn-primary">View Document</a>
                             </div>
+                          </div>
                             
 
 
