--- a/views/auth/mobileapp.ejs
+++ b/views/auth/mobileapp.ejs
@@ -62,7 +62,7 @@
 
           <li><a class="nav-link scrollto" href="/#aboutus">About Us</a></li>
           <li><a class="nav-link scrollto" href="/#services">Services</a></li>
-          <li><a class="nav-link scrollto" href="/#faq">FAQ's</a></li>
+          <li><a class="nav-link scrollto" href="https://sihchatbot.tawk.help/category/faq">FAQ's</a></li>
           <li><a class="nav-link scrollto" href="/Mobileapp">Mobile App</a></li>
           <li><a class="nav-link scrollto" href="/Signup">Signup</a></li>
           <li><a class="nav-link scrollto" href="/Login">Login</a></li>
@@ -108,7 +108,7 @@
           <div class="col-lg-5 col-md-12 footer-info">
             <a href="index.html" class="logo d-flex align-items-center">
               <img src="assets/img/logo.png" alt="">
-              <span>Yukti</span>
+              <!-- <span>Yukti</span> -->
             </a>
             <p>We are here to provide an IT embeded portal in place for handling the labour complaints.</p>
             <!-- <div class="social-links mt-3">
@@ -126,7 +126,7 @@
               <li><i class="bi bi-chevron-right"></i> <a href="#aboutus">About us</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#services">Services</a></li>
               <!-- <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li> -->
-              <li><i class="bi bi-chevron-right"></i> <a href="#faq">FAQ's</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="https://sihchatbot.tawk.help/category/faq">FAQ's</a></li>
             </ul>
           </div>
 
