--- a/views/user/complaintRegistration.ejs
+++ b/views/user/complaintRegistration.ejs
@@ -201,8 +201,21 @@
                     <div class="row mb-3">
                       <label for="inputPassword" class="col-sm-2 col-form-label">Complaint</label>
                       <div class="col-sm-10">
-                        <textarea name="ComplaintBody" id="" placeholder="Complaint" class="form-control"
+                        <textarea name="ComplaintBody" id="transcript" placeholder="Complaint" class="form-control"
                           style="height: 200px"></textarea>
+                        <button type="button" id="action" onclick="toggle()" class="btn btn-primary mt-2">Record Complaint <i class="bi bi-mic"></i></button>
+                        <select name="language" id="language-select" class="form-select mt-2 p-2" aria-label="Default select example" style="width: 11rem" required>
+                          <option selected value="en-IN">English</option>
+                          <option value="bn-IN">Bengali</option>
+                          <option value="gu-IN">Gujarati</option>
+                          <option value="hi-IN">Hindi</option>
+                          <option value="kn-IN">Kannada</option>
+                          <option value="ml-IN">Malayalam</option>
+                          <option value="pa-IN">Punjabi</option>
+                          <option value="bn-IN">Bengali</option>
+                          <option value="ta-IN">Tamil</option>
+                          <option value="te-IN">Telugu</option>
+                        </select>
                       </div>
                     </div>
 
@@ -263,6 +276,50 @@
           class="bi bi-arrow-up-short"></i></a>
 
       <!-- Vendor JS Files -->
+      <script type="text/javascript">
+        var recognition = new webkitSpeechRecognition();
+        recognition.continuous = true;
+        recognition.interimResults = true;
+        recognition.lang = "hi-IN";
+
+        var listening = false;
+
+        var final_transcript = '';
+        var interim_transcript = '';
+
+        recognition.onresult = function(event) {
+
+          for (var i = event.resultIndex; i < event.results.length; ++i) {
+            if (event.results[i].isFinal) {
+              final_transcript += event.results[i][0].transcript;
+               document.getElementById('transcript').value = final_transcript;
+            } else {
+              interim_transcript += event.results[i][0].transcript;
+                  document.getElementById('transcript').value = interim_transcript;
+            }
+          }
+          interim_transcript = final_transcript+' '
+          console.log(interim_transcript, final_transcript);
+
+        };
+
+        function toggle() {
+          recognition.lang = document.getElementById('language-select').value;
+          console.log(listening);
+        if(listening) {
+          recognition.stop();
+          listening = false;
+          // var tag = document.createElement("i");
+          // tag.setAttribute( 'class', 'bi bi-mic' );
+        document.getElementById('action').innerHTML = `Record Complaint <i class="bi bi-mic"></i>`;
+        }
+        else {
+          recognition.start();
+          listening = true;
+          document.getElementById('action').innerHTML = "Stop";
+        }
+        }
+      </script>
       <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
       <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
       <script src="assets/vendor/chart.js/chart.min.js"></script>
