--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -59,6 +59,8 @@
 
 <body>
 
+
+    <%- include('../common_scripts/zoom')%>
     <%- include('../common_scripts/analytics')%>
 
         <%- include('../common_scripts/chatbot')%>
