--- a/views/auth/confirmPassword.ejs
+++ b/views/auth/confirmPassword.ejs
@@ -57,6 +57,7 @@
 
 <body>
 
+    <%- include('../common_scripts/zoom')%>
     <%- include('../common_scripts/analytics')%>
         <div style="position: absolute; top:10px; right:10px;">
             <%- include('../common_scripts/translate')%>
