--- a/views/user/complaintRegistration.ejs
+++ b/views/user/complaintRegistration.ejs
@@ -35,6 +35,7 @@
 
 <body>
 
+  <%- include('../common_scripts/zoom')%>
   <%- include('../common_scripts/analytics')%>
     <%- include('../common_scripts/chatbot')%>
 
@@ -55,7 +56,19 @@
         <nav class="header-nav ms-auto">
           <ul class="d-flex align-items-center">
 
+            <li class="nav-item dropdown">
 
+              <a class="nav-link nav-icon" style="cursor:pointer" onclick="zoom()">
+                A+
+              </a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link nav-icon" style="cursor:pointer" onclick="zoomout()">
+                A-
+              </a>
+              
+
+            </li>
             <li class="nav-item dropdown pe-3">
 
               <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
