--- a/views/desk1/complaintpage.ejs
+++ b/views/desk1/complaintpage.ejs
@@ -167,6 +167,12 @@
                     </div>
                   </div>
                   <div class="row mb-3">
+                    <label for="inputText" class="col-sm-3 ">Similarity Percentage</label>
+                    <div class="col-sm-9">
+                      <%=complaint.percentage%>
+                    </div>
+                  </div>
+                  <div class="row mb-3">
                     <label for="inputText" class="col-sm-3 ">Gender</label>
                     <div class="col-sm-9">
                       <%=EndUserData.Gender%>
