Added automatic complaint rejection

--- a/views/user/complaintpage.ejs
+++ b/views/user/complaintpage.ejs
@@ -69,7 +69,7 @@
               <a class="nav-link nav-icon" style="cursor:pointer" onclick="zoomout()">
                 A-
               </a>
-              
+
 
             </li>
 
@@ -185,7 +185,7 @@
       <main id="main" class="main">
 
         <div class="pagetitle">
-          <h1>Form Elements</h1>
+          <h1>Complaint Page</h1>
           <nav>
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="/Dashboard">Dashboard/Complaint Page</a></li>
