--- a/views/user/complaintpage.ejs
+++ b/views/user/complaintpage.ejs
@@ -263,7 +263,7 @@
                               </div>
                               <div class="row mb-3">
                                 <label for="inputPassword" class="col-sm-3 ">Complaint Body</label>
-                                <div class="col-sm-9">
+                                <div class="col-sm-9" style="text-align: justify;">
 
                                   <%=complaint.ComplaintBody%>
 
