--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -51,7 +51,7 @@
                 <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
 
                   <div class="d-flex justify-content-center py-4">
-                    <a href="/UserDashbord" class="logo d-flex align-items-center w-auto">
+                    <a href="/UserDashbord" class=" d-flex align-items-center w-auto">
                       <img src="assets/img/logo.png" alt="">
                       <!-- <span class="d-block ">Yukti</span> -->
                     </a>
