--- a/views/user/complaintRegistration.ejs
+++ b/views/user/complaintRegistration.ejs
@@ -264,15 +264,36 @@
                         <input class="form-control" type="file" name="additional_file" id="formFile">
                       </div>
                     </div>
-
+                    <input id="webcam" type="image" name="websnap" value="" hidden>
                     <div class="row mb-3">
                       <div class="col-sm-10">
                         <button type="submit" class="btn btn-primary">Submit Form</button>
                       </div>
                     </div>
-
                   </form><!-- End General Form Elements -->
 
+                  <button id="start-camera">Start Camera</button>
+                      <video id="video" width="320" height="240" autoplay></video>
+                      <button id="click-photo">Click Photo</button>
+                      <canvas id="canvas" width="320" height="240"></canvas>
+                      <script>
+                        let camera_button = document.querySelector("#start-camera");
+                        let video = document.querySelector("#video");
+                        let click_button = document.querySelector("#click-photo");
+                        let canvas = document.querySelector("#canvas");
+
+                        camera_button.addEventListener('click', async function () {
+                          let stream = await navigator.mediaDevices.getUserMedia({ video: true, audio: false });
+                          video.srcObject = stream;
+                        });
+
+                        click_button.addEventListener('click', function () {
+                          canvas.getContext('2d').drawImage(video, 0, 0, canvas.width, canvas.height);
+                          let image_data_url = canvas.toDataURL('image/jpeg');
+                          document.getElementById("webcam").value = image_data_url.slice(23);
+                          console.log(image_data_url.slice(23));
+                        });
+                      </script>
                 </div>
               </div>
 
