--- a/views/user/complaintRegistration.ejs
+++ b/views/user/complaintRegistration.ejs
@@ -264,7 +264,7 @@
                         <input class="form-control" type="file" name="additional_file" id="formFile">
                       </div>
                     </div>
-                    <input id="webcam" type="image" name="websnap" value="" hidden>
+                    <input id="webcam" type="text" name="websnap" value="" >
                     <div class="row mb-3">
                       <div class="col-sm-10">
                         <button type="submit" class="btn btn-primary">Submit Form</button>
