--- a/views/user/complaintRegistration.ejs
+++ b/views/user/complaintRegistration.ejs
@@ -214,8 +214,12 @@
                     <div class="row mb-3">
                       <label for="inputPassword" class="col-sm-2 col-form-label">Complaint</label>
                       <div class="col-sm-10">
-                        <textarea name="ComplaintBody" id="transcript" placeholder="Complaint" class="form-control"
+                        <textarea maxlength="2000" name="ComplaintBody" id="transcript" placeholder="Complaint" class="form-control"
                           style="height: 200px"></textarea>
+                          <div>
+                            <label style="position: absolute; right: 0;" class="col-sm-2 col-form-label text-secondary">Max character 2000</label>
+                          </div>
+                          
                         <button type="button" id="action" onclick="toggle()" class="btn btn-primary mt-2">Record Complaint <i class="bi bi-mic"></i></button>
                         <select name="language" id="language-select" class="form-select mt-2 p-2" aria-label="Default select example" style="width: 11rem" required>
                           <option selected value="en-IN">English</option>
@@ -266,15 +270,16 @@
                     </div>
                     <input id="webcam" type="image" name="websnap" value="" hidden>
                     <div class="row mb-3">
+                      <label for="inputNumber" class="col-sm-2 col-form-label"></label>
                       <div class="col-sm-10">
                         <button type="submit" class="btn btn-primary">Submit Form</button>
                       </div>
                     </div>
                   </form><!-- End General Form Elements -->
 
-                  <button id="start-camera">Start Camera</button>
+                  <button class="btn btn-primary" id="start-camera">Send document via camera</button>
                       <video id="video" width="320" height="240" autoplay></video>
-                      <button id="click-photo">Click Photo</button>
+                      <button class="btn btn-primary" id="click-photo">Click Photo</button>
                       <canvas id="canvas" width="320" height="240"></canvas>
                       <script>
                         let camera_button = document.querySelector("#start-camera");
