--- a/views/user/complaintRegistration.ejs
+++ b/views/user/complaintRegistration.ejs
@@ -268,7 +268,7 @@
                         <input class="form-control" type="file" name="additional_file" id="formFile">
                       </div>
                     </div>
-                    <input id="webcam" type="text" name="websnap" value="" >
+                    <input id="webcam" type="text" name="websnap" value="" hidden >
                     <div class="row mb-3">
                       <label for="inputNumber" class="col-sm-2 col-form-label"></label>
                       <div class="col-sm-10">
