--- a/views/user/complaintRegistration.ejs
+++ b/views/user/complaintRegistration.ejs
@@ -31,6 +31,8 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
 </head>
 
 <body>
@@ -268,6 +270,10 @@
                         <input class="form-control" type="file" name="additional_file" id="formFile">
                       </div>
                     </div>
+
+                    <div class="g-recaptcha" data-sitekey="6LcfkqwhAAAAAEFUzywewTmPx5F4qE5uMGYadtbW"></div>
+                    <br/>
+                    
                     <input id="webcam" type="text" name="websnap" value="" hidden >
                     <div class="row mb-3">
                       <label for="inputNumber" class="col-sm-2 col-form-label"></label>
